# stock-signal-platform

./: .env.atlassian.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LEARNING_SESSION.md  PROGRESS.md  PROJECT_INDEX.md  README.md  alembic.ini  command-center-prototype.html  docker-compose.yml  initial-prompt.md  mkdocs.yml  project-plan.md  prototype-ui.html  pyproject.toml  run.sh  setup.sh
.claude/: settings.json
.claude/commands/: check-stale-memories.md  new-endpoint.md  new-model.md  new-tool.md  ship.md
.claude/hooks/: doc-delta-reminder.sh  stale-state-check.sh
.claude/memory/: feedback_jira_no_resolve_on_create.md
.claude/plans/: cozy-wandering-backus.md
.claude/rules/: api-endpoints.md  brainstorm-routing.md  database-models.md  doc-delta.md  frontend-components.md  lmstudio-triage.md  local-llm-triage.md  phase-end-review.md  plan-execution.md  python-backend.md  reference-tables.md  review-config.md  review-scaling.md  testing.md  workflow-optimization.md  worktree-create.md
.github/workflows/: assessment.yml  ci-eval.yml  ci-merge.yml  ci-nightly.yml  ci-pr.yml  deploy.yml
.hypothesis/constants/: 024ed740cf400aa4  0742dfe29bad7b5f  079968c5952f3c34  0aee4ea2e35e2e77  0ffe4401c284acec  109b6449a9081d82  15fa04b627d8f31d  16259bebbd526e90  167b6f5b2204c104  16f48fe6ec07389e  1b3273a936a29c38  1ce1763de8649040  1ce28f3a4ec089b3  1d28814ee48c0dbb  215cd85223a0a4dc  256445fb6780045d  25868a432ff2f609  2698ae8b6ce28547  27293ac73086c4e4  284944e32149d07a  2871ae4a3661e653  2c332daf536fe895  2db0db3572ecbd29  30a9f389a5b2d952  3137992132176788  3299ed9b74c43e49  38154bc3df5c5b7b  394ace0c13f8e69f  3950e90e6d9fb12f  39d544eccb55765f  3b5491afb97b8747  3be47058893b5dd9  3e2e3416fff5b765  3e31cf9f6116cdf1  3f3396f37282e9ac  3f80b8f3b0ffc8e3  3fcb0fbfedaa1368  409c8a8f4db60d12  43cf45094caffea3  463c5fe80816cf4d  (+136 more)
.semgrep/: observability-rules.yml  stock-signal-rules.yml
.serena/: project.yml
backend/: .env.example  CLAUDE.md  config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py  rate_limit.py  request_context.py  validation.py
backend/agents/: __init__.py  base.py  entity_registry.py  executor.py  general_agent.py  graph.py  graph_v2.py  guards.py  intent_classifier.py  llm_client.py  message_compressor.py  model_config.py  observability.py  observability_writer.py  planner.py  react_loop.py  result_validator.py  simple_formatter.py  stock_agent.py  stream.py  synthesizer.py  token_budget.py  tool_groups.py  user_context.py
backend/core/: logging.py
backend/mcp_server/: __init__.py  auth.py  lifecycle.py  observability_tools.py  server.py  tool_client.py  tool_server.py
backend/middleware/: __init__.py  csrf.py  error_handler.py  trace_id.py
backend/migrations/: env.py
backend/models/: __init__.py  alert.py  assessment.py  audit.py  backtest.py  base.py  chat.py  convergence.py  dividend.py  dq_check_history.py  earnings.py  forecast.py  historical_feature.py  index.py  llm_config.py  login_attempt.py  logs.py  news_sentiment.py  oauth_account.py  pipeline.py  portfolio.py  portfolio_health.py  price.py  recommendation.py  signal.py  stock.py  ticker_ingestion_state.py  user.py
backend/observability/: bootstrap.py  buffer.py  client.py  collector.py  context.py  models.py  queries.py  span.py  spool.py  token_budget.py  writer.py
backend/routers/: admin.py  admin_pipelines.py  alerts.py  auth.py  backtesting.py  chat.py  convergence.py  forecasts.py  health.py  indexes.py  market.py  news.py  observability.py  portfolio.py  preferences.py  sectors.py  sentiment.py  stocks.py  tasks.py
backend/schemas/: admin_pipeline.py  alerts.py  auth.py  backtesting.py  chat.py  command_center.py  (+15 more)
benchmark/: README.md  __init__.py  config.yaml  groq-proxy.py  harness.py  judge-prompt.md  judge.py  litellm-config.yaml  metrics.py  report.py  scoring_rubric.yaml  worktree.py
docs/: ADR.md  FSD.md  PRD.md  TDD.md  api-reference.md  architecture.md  data-architecture.md  getting-started.md  index.md  phase2-requirements.md  signals-guide.md  workflow_phase2.md
e2e-screenshots/: aapl-snapshot.md
frontend/: CLAUDE.md  eslint.config.mjs  jest-env-with-fetch.js  jest.config.ts  next.config.ts  package-lock.json  package.json
global-claude-md-for-home-dir/: CLAUDE.md  design-principles.md
scripts/: backfill_features.py  health_report.py  pre-commit-agent-gate.sh  seed_all.py  seed_dividends.py  seed_etfs.py  seed_forecasts.py  seed_fundamentals.py  seed_portfolio.py  seed_prices.py  seed_reason_tier.py  sync_indexes.py  sync_sp500.py
tests/: conftest.py  markers.py
(+1193 files in other folders)
