[project]
name = "stock-signal-platform"
version = "0.1.0"
description = "Automated signal detection and investment recommendations for US equities"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.2.1",
    "celery>=5.6.2",
    "defusedxml>=0.7.1",
    "edgartools>=5.24.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.1",
    "gdeltdoc>=1.12.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "lxml>=6.0.2",
    "mcp>=1.26.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "prophet>=1.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "PyJWT>=2.9.0",
    "redis>=7.2.1",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.47",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.41.0",
    "yfinance>=1.2.0",
    "langfuse>=4.0.1",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "testcontainers[postgres,redis]>=4.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "pre_commit: fast tests for pre-commit hook",
    "ci_only: tests that only run in CI pipeline",
    "agent_gated: tests gated by agent/tool code changes",
    "integration: integration tests requiring real subprocess or external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["backend"]

[tool.coverage.report]
fail_under = 80
show_missing = true
