[project]
name = "stock-signal-platform"
version = "0.1.0"
description = "Automated signal detection and investment recommendations for US equities"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.2.1",
    "celery>=5.6.2",
    "defusedxml>=0.7.1",
    "edgartools>=5.24.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.1",
    "gdeltdoc>=1.12.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "lxml>=6.0.2",
    "mcp>=1.26.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "prophet>=1.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "PyJWT>=2.9.0",
    "redis>=7.2.1",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.47",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.41.0",
    "yfinance>=1.2.0",
    "langfuse>=4.0.1",
    "pandas-ta-openbb>=0.4.24",
    "quantstats>=0.0.81",
    "pyportfolioopt>=1.6.0",
    "resend>=2.27.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "fakeredis[lua]>=2.34.1",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "hypothesis>=6.151.10",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.4",
    "syrupy>=5.1.0",
    "testcontainers[postgres,redis]>=4.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "pre_commit: fast tests for pre-commit hook (< 30s total)",
    "ci_only: tests that only run in CI pipeline",
    "agent_gated: tests gated by agent/tool code changes",
    "integration: integration tests requiring real subprocess or external services",
    "domain: financial domain invariant tests (Hypothesis property-based)",
    "regression: regression tests for previously-fixed bugs",
    "migration: Alembic migration consistency tests",
    "cache: Redis cache behavior tests (TTL, invalidation, stampede)",
]
timeout = 30

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/migrations/*",
    "backend/mcp_server.py",
    "backend/__main__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
